--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "bootstrap": "^5.0.1",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
+    "@popperjs/core": "^2.9.2",
     "stimulus": "^2.0.0",
+    "stimulus_reflex": "^3.4.1",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
