--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "tasker",
   "private": true,
   "dependencies": {
+    "@popperjs/core": "^2.9.2",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
@@ -9,7 +10,7 @@
     "bootstrap": "^5.0.1",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
-    "@popperjs/core": "^2.9.2",
+    "sortablejs": "^1.13.0",
     "stimulus": "^2.0.0",
     "stimulus_reflex": "^3.4.1",
     "turbolinks": "^5.2.0"
